@startuml

title __Behavior Class Diagram__\n

  package platform {
    package platform.behaviors {
        class AdaptationTypeManager {
            - stringToAdaptationMap : HashMap<String, AdaptivePolicy>
            + AdaptationTypeManager()
            + getAdaptivePolicy()
        }
      }

  }
  
  package platform {
    package platform.behaviors {
        interface AdaptivePolicy {
            {abstract} + init()
        }
      }

  }
  

  package platform {
    package platform.behaviors {
        abstract class CameraMAPEBehavior {
            - cameraHashMapMap : Map<Camera, HashMap<String, Object>>
            + behaviourInit()
            {abstract} + plan()
            {abstract} + analyse()
            {abstract} + monitor()
            {abstract} + execute()
        }

    }
  }
  

  package platform {
    package platform.behaviors {
        abstract class ContMotionController {
            # calculatePTZVectorToMoveToBottom()
            # calculatePTZVectorToMoveToTop()
            # calculatePTZVectorToMoveToCenter()
        }
      }

  }
  

  package platform {
    package platform.behaviors {
        abstract class GoalMAPEBehavior {
            - hashMap : Map<String, Object>
            + behaviourInit()
            {abstract} + plan()
            {abstract} + analyse()
            {abstract} + monitor()
            {abstract} + execute()
        }

    }
  }
  

  package platform {
    package platform.behaviors {
        abstract class MotionController {
            - commandMap : Map<Camera, PTZCommand>
            - lastStopCommand : Map<Camera, Boolean>
            + motInit()
            + planMotion()
            {abstract} + calculatePTZVector()
            + executeMotion()
        }
      }

  }


  package platform {
    package platform.behaviors {

              package platform.behaviors.impl {
                class PairedCameraLRBal {
                    + plan()
                    + analyse()
                    + monitor()
                    + execute()
                    + init()
                }
              }
            }
          }


  package platform {
    package platform.behaviors {

              package platform.behaviors.impl {
                  class BlueCrashRecorder {
                      ~ stateMachineMap : Map<Camera, SearchForCrashStateMachine>
                      + BlueCrashRecorder()
                      + calculatePTZVector()
                      - getObjectLocationFmObjectLocationsInResults()
                      + init()
                  }
                }
              }
            }




  BlueCrashRecorder -up-|> ContMotionController

  CameraMAPEBehavior -up-|> AdaptivePolicy
  ContMotionController -up-|> MotionController
  GoalMAPEBehavior -up-|> AdaptivePolicy
  MotionController -up-|> AdaptivePolicy

  PairedCameraLRBal -up-|> CameraMAPEBehavior


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
